Plantillas para pruebas

--- a/notaDebito.html
+++ b/notaDebito.html
@@ -3,7 +3,7 @@
 
 <head></head>
 
-<body>﻿ <title>Nota Débito Grupo Empresarial I3</title>
+<body>﻿ <title>Nota Débito </title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <style>
     /*!
@@ -10050,7 +10050,7 @@
   <div class="col-md-4 col-lg-4" style="">
     <!--img src="data:image/png;base64," alt="Logo" height="85" class="float-left" width="300"-->
   </div>
-  <div class="paragraph1 col-md-4 col-lg-5" style=""> Actividades de arquitectura e ingenieria y otras actividades conexas de consultoria tecnica <br>
+  <div class="paragraph1 col-md-4 col-lg-5" style="">  <br>
     <div class="title4" id="invoice-prefix-information"></div>
   </div>
   <!--div class="col-lg-3" style=""><img id="invoice-qr" src="" alt="QR" height="150px" width="150px" class="float-right"></div-->
